--- a/MIAP/Presentation.html
+++ b/MIAP/Presentation.html
@@ -63,8 +63,8 @@
                 est de faciliter nos vies de gourmets. En manque de
                 découverte culinaire durant ces temps de confinement,
                 nous avons à coeur de transformer notre manque de
-                nourriture délicieuse en travaillant sur ce projet.
-                Dans l'espérance d’un déconfinement et d’un retour à
+                nourriture délicieuse en site internet.
+                Dans l'espérance d’une fin de pandémie et d’un retour à
                 la normale, nous souhaitons préparer nos retours dans
                 les restaurants de nos rêves. En se réunissant autour
                 de notre passion commune qu’est la nourriture, nous
