--- a/Principal (Anglais)/equipe.html
+++ b/Principal (Anglais)/equipe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equipe | Miap</title>
+    <title>Team | Miap</title>
     <link rel="icon" type="image/png" href="./image/LogoPng.png">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- style css -->
@@ -34,22 +34,22 @@
                         <div class="limit-box">
                             <nav class="main-menu">
                                 <ul class="menu-area-main">
-                                    <li> <a href="./equipe.html">A propos</a>
+                                    <li> <a href="./equipe.html">About</a>
                                         <ul class="menu-area-main">
-                                            <li>Présentation du projet</li>
-                                            <li>Notre équipe</li>
+                                            <li>Presentation of the project</li>
+                                            <li>Our team</li>
                                         </ul>
                                     </li>
-                                    <li> <a href="./blog.html"> Blog</a> </li>
-                                    <li> <a href="./aide.html">Aide & Contact</a> </li>
+                                    <li> <a href="./blog.html">Blog</a> </li>
+                                    <li> <a href="./aide.html">Help & Contact</a> </li>
                                     <li>
                                         <form name="x" action="./index.php?controle=connexion&action=connexion" method="post">
-                                            <button type="submit" class="btn-link nav-link">Se Connecter</button>
+                                            <button type="submit" class="btn-link nav-link">Log in</button>
                                         </form>
                                     </li>
                                     <li>
                                         <form name="x" action="./index.php?controle=inscription&action=affins" method="post">
-                                            <button id="login" type="submit" class="btn-link nav-link">Inscription</button>
+                                            <button id="login" type="submit" class="btn-link nav-link">Sign in</button>
                                         </form>
                                     </li>
                                     <li>
@@ -75,8 +75,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2> Equipe </h2>
-                        <span> Découvrez notre équipe haute en couleur ! </span>
+                        <h2>Team</h2>
+                        <span> Discover our colorful team ! </span>
                     </div>
                 </div>
             </div>
@@ -84,89 +84,89 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="video-pre">
-                        <iframe width="980" height="551,25" src="https://www.youtube.com/embed/xCXohLWzA_o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/tR8GOD609vA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                    </div>
                 </div>
             </div>
 
             <hr><br>
             <div class="row">
-                <div class="col-md-6"><h1>Hassina AYACHI : PDG</h1></div>
+                <div class="col-md-6"><h1>Hassina AYACHI : CEO</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/hassina.png" alt="logo" style="width:300px;"></div>
-                <div class="col-md text-center"><p>Our very own CEO, she’s the one who’s in charge of managing us (and kicking our butts) and handling the project management such as the planning, giving tasks, making sure we are on schedule, handling the competitive analysis.
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/hassina.png" alt="Hassina" style="width:300px;"></div>
+                <div class="col-md text-center"><p>Our very own CEO, she is the one who is in charge of managing us and handling the project management such as the planning, giving tasks, making sure we are on schedule, handling the competitive analysis...
                     She is our spokesperson, you might have seen her in our videos.
                     Not only she is our CEO but she is the director and video editor behind our videos.
-                    She is also the one who overviews every designs. Finally, she is the one who translated our wonderful website.
+                    She is also the one who overviews every designs and more. Finally, she is the one who translated our wonderful website.
                     PS: she always brings food for everyone ^^</p>
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-md"><h1>Moïna VALMY : Développeuse web</h1></div>
+                <div class="col-md"><h1>Moïna VALMY : Web developer</h1></div>
             </div></br>
             <div class="row">
                 <div class="col-md text-center"><p>
-                    We introduce the first web developper: Moïna. She is our calm and competent asset.
+                    We introduce the first web developer: Moïna. She is our calm and competent asset.
                     She handled the visual aspect of the website.
-                    She is also good at multitasking since she helped with the competitive analysis.</p>
+                    She is also good at multitasking since she helped with the competitive analysis.
+                    She also managed to code our app.</p>
                 </div>
-                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/moina.png" alt="logo" style="width:300px;"></div>
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/moina.png" alt="Moïna" style="width:300px;"></div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-md"><h1>Mehdi AL SID CHEIKH : Développeur web</h1></div>
+                <div class="col-md"><h1>Mehdi AL SID CHEIKH : Web developer</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/mehdi.png" alt="logo" style="width:300px;"></div>
-                <div class="col-md text-center"><p>Here comes the second web developper: Mehdi. He is lively and cheerful, always brights up the mood BUT he is always late.
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/mehdi.png" alt="Mehdi" style="width:300px;"></div>
+                <div class="col-md text-center"><p>Here comes the second web developer: Mehdi. He is lively, cheerful and he always brights up the mood BUT he is always late.
                     He handled the visual aspect of the website. He is good at multitasking as well since he took part in the competitive analysis.
-                    Mehdi is also our very own Community manager so don’t hesitate to interact with him on social media</p>
+                    Mehdi is also our very own community manager so don’t hesitate to interact with him on our social medias.</p>
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-md"><h1>Quentin DARTY : Développeur</h1></div>
+                <div class="col-md"><h1>Quentin DARTY : Designer</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"><p>Quentin is like the quiet kid in the back of the class. He is discret at first but more outgoing if you get to know him.
-                    He is very creative, that’s why he was in charge of every design.
-                    He designed the graphic charter of the website but also the future app.</p>
+                <div class="col-md text-center"><p>Quentin is like the quiet kid in the back of the class. He is discret at first but more outgoing when you get to know him.
+                    He is very creative, that is why he was in charge of every design.
+                    He designed the graphic charter of the website but also the app.</p>
                 </div>
-                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/Quentin.png" alt="logo" style="width:300px;"></div>
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/Quentin.png" alt="Quentin" style="width:300px;"></div>
             </div></br>
             <hr>
             <div class="row">
-                <div class="col-md"><h1>Hubert TRUONG : Développeur d'applications</h1></div>
+                <div class="col-md"><h1>Hubert TRUONG : App developer and data manager</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/hubert.png" alt="logo" style="width:300px;"></div>
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/hubert.png" alt="Hubert" style="width:300px;"></div>
                 <div class="col-md text-center"><p>Hubert is the cool kid. He’s very outgoing and can get along with anyone. It’s always a pleasure working with him since he lights up the mood.
-                    He is also very talented since he is the one currently coding our website but also our incoming app.</p>
+                    He is also very talented since he is the one who coded our app and our website.</p>
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-md"><h1>Fardeen POOREA : Développeur</h1></div>
+                <div class="col-md"><h1>Fardeen POOREA : Web developer and data manager</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"><p>Idk yet.</p></div>
-                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/fardeen.png" alt="logo" style="width:300px;"></div>
+                <div class="col-md text-center"><p>Fardeen is fun and enjoys joking around but he gets the work done every time. He managed our database and he implemented the functions on Miap.</p></div>
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/fardeen.png" alt="Fardeen" style="width:300px;"></div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-md"><h1>Janik JIANG : Développeur</h1></div>
+                <div class="col-md"><h1>Janik JIANG : Web developer and data manager</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/janik.png" alt="logo" style="width:300px;"></div>
-                <div class="col-md text-center"><p>Janik is like the quiet kid in front of the class. He is smart and has a great sense of logic</p></div>
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/janik.png" alt="Janik" style="width:300px;"></div>
+                <div class="col-md text-center"><p>Janik is like the quiet kid in front of the class. He is smart and has a great sense of logic. He teamed up with Fardeen to implement Miap's functions and handle the database.</p></div>
             </div>
         </div>
     </div>
 
 <div id="scroll_to_top">
-    <a href="#top"><img src="image/scroll.png" alt="Retourner en haut" /></a>
+    <a href="#top"><img src="image/scroll.png" alt="Go to the top" /></a>
 </div>
 
 <footer>
@@ -175,7 +175,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 width">
                     <div class="address">
-                        <h3>Adresse</h3>
+                        <h3>Address</h3>
                         <p><img src="icon/3.png">143 Avenue de Versailles, 75016 Paris</p>
                     </div>
                 </div>
@@ -183,15 +183,15 @@
                     <div class="address">
                         <h3>Menu</h3>
                         <p><a href="./blog.html">Blog</a></p>
-                        <p><a href="./equipe.html">A propos</a></p>
-                        <p><a href="./aide.html">Aide & Contact</a></p>
-                        <p><a href="#">Connexion</a></p>
-                        <p><a href="#">Inscription</a></p>
+                        <p><a href="./equipe.html">About</a></p>
+                        <p><a href="./aide.html">Help & Contact</a></p>
+                        <p><a href="#">Log in</a></p>
+                        <p><a href="#">Sign in</a></p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 width">
                     <div class="address">
-                        <h3>Réseaux Sociaux </h3>
+                        <h3>Social medias</h3>
                         <div class="contant_icon">
                             <!--<li><img src="icon/fb.png" alt="icon"/></li>-->
                             <p><a href="https://twitter.com/Miap09882942"><img src="icon/tw.png" alt="icon"/></a>
