--- a/Principal (Anglais)/index.html
+++ b/Principal (Anglais)/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Miap - Partagez vos restaurants !</title>
+      <title>Miap - Share your restaurants !</title>
       <link rel="icon" type="image/png" href="./image/LogoPng.png">
       <meta name="keywords" content="">
       <meta name="description" content="">
@@ -46,22 +46,22 @@
                         <div class="limit-box">
                            <nav class="main-menu">
                               <ul class="menu-area-main">
-                                 <li> <a href="./equipe.html">A propos</a>
+                                 <li> <a href="./equipe.html">About</a>
                                     <ul class="menu-area-main">
-                                       <li>Présentation du projet</li>
-                                       <li>Notre équipe</li>
+                                       <li>Presentation of the project</li>
+                                       <li>Our team</li>
                                     </ul>
                                  </li>
-                                 <li> <a href="./blog.html"> Blog</a> </li>
-                                 <li> <a href="./aide.html">Aide & Contact</a> </li>
+                                 <li> <a href="./blog.html">Blog</a> </li>
+                                 <li> <a href="./aide.html">Help & Contact</a> </li>
                                  <li>
                                     <form name="x" action="./index.php?controle=connexion&action=connexion" method="post">
-                                       <button type="submit" class="btn-link nav-link">Se Connecter</button>
+                                       <button type="submit" class="btn-link nav-link">Log in</button>
                                     </form>
                                  </li>
                                  <li>
                                     <form name="x" action="./index.php?controle=inscription&action=affins" method="post">
-                                       <button id="login" type="submit" class="btn-link nav-link">Inscription</button>
+                                       <button id="login" type="submit" class="btn-link nav-link">Sign in</button>
                                     </form>
                                  </li>
                                  <li>
@@ -90,8 +90,8 @@
                   <div class="container">
                      <div class="carousel-caption relative">
                         <h1>Miap</h1>
-                        <p> Partagez vos meilleurs restaurants avec vos amis </p>
-                        <a  href="./index.php?controle=inscription&action=affins">Commencez dès maintenant !</a>
+                        <p>Share your best restaurants with your friends</p>
+                        <a  href="./index.php?controle=inscription&action=affins">Start now !</a>
                      </div>
                   </div>
                </div>
@@ -105,18 +105,8 @@
                <div class="col-md-12">
                   <div class="titlepage">
                      <h2>About</h2>
-                     <span> Nous nous sommes réunis autour d'un projet commun qui est de faciliter nos vies de gourmets.
-                         En manque de découverte culinaire durant ces temps de confinement,
-                          nous avons à coeur de transformer notre manque de nourriture délicieuse en travaillant sur ce projet.
-                           Dans l'espérance d’un déconfinement et d’un retour à la normale,
-                            nous souhaitons préparer nos retours dans les restaurants de nos rêves.
-                             En se réunissant autour de notre passion commune qu’est la nourriture,
-                              nous avons pris la décision de créer un site internet collaboratif: <strong>Miap.</strong>
-                               <br>Pourquoi avons-nous choisi Miap ? Miap est la contraction de Miam et de Map tout simplement.
-                                Nous souhaitons utiliser une carte dans le but de créer une communauté de Miapies
-                                 qui apporteraient leur contribution à notre projet en partageant leurs bonnes adresses.
-                                  Cette communauté sera réunie sur notre réseau social et pourra ainsi interagir par le biais
-                                   de notre intérêt commun pour la découverte culinaire. </span>
+                     <span> We are gathered around a common project which is to facilitate our gourmet’s lives. In lack of culinary discoveries during lockdown, we have at heart to transform our lack of delicious food into a website. In hope of an end to the pandemic and a return to normal, we which to prepare our return in the restaurants of our dreams. Gathered around our shared passion that is food, we took a decision to create a collaborative website: Miap. Why did we choose Miap ? Miap is the contraction of yummy ( « Miam » in French ) and map. We wish to use a map aiming to create a community of Miapies who would make their contribution to our project by sharing their good adresses. This community will be gathered on our social media and will be able to interact through our common interest in culinary discoveries.
+ </span>
                   </div>
                </div>
             </div>
@@ -124,7 +114,7 @@
                <div class="col-md-12">
                   <div class="img-box">
                      <figure><img src="images/about.png" alt="img"/></figure>
-                     <a href="#">En savoir plus</a>
+                     <a href="#">Read more</a>
                   </div>
                </div>
             </div>
@@ -137,7 +127,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2> Explorez notre site</h2>
+                     <h2>Explore our website</h2>
                      <span></span>
                   </div>
                </div>
@@ -151,7 +141,7 @@
                         <img  src="images/1.jpg" class="zoom img-fluid "  alt="blog">
 
                         <span class="hoverle">
-                           <span>Notre blog</span>
+                           <span>Our blog</span>
                         </span>
                      </figure></a>
                   </div>
@@ -159,10 +149,10 @@
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 thumb">
                   <div class="service-box"><a href="./equipe.html">
                      <figure>
-                        <img  src="images/2.jpg" class="zoom img-fluid "  alt="equipe">
+                        <img  src="images/2.jpg" class="zoom img-fluid "  alt="team">
 
                         <span class="hoverle">
-                           <span>Notre équipe</span>
+                           <span>Our team</span>
                         </span>
                      </figure></a>
                   </div>
@@ -180,7 +170,7 @@
          </div>
       </div>
       <div id="scroll_to_top">
-         <a href="#top"><img src="image/scroll.png" alt="Retourner en haut" /></a>
+         <a href="#top"><img src="image/scroll.png" alt="Go to the top" /></a>
       </div>
       <!-- end service -->
       <!-- Download -->
@@ -210,7 +200,7 @@
                <div class="row">
                   <div class="col-lg-4 col-md-6 col-sm-12 width">
                      <div class="address">
-                        <h3>Adresse</h3>
+                        <h3>Address</h3>
                         <p><img src="icon/3.png">143 Avenue de Versailles, 75016 Paris</p>
                      </div>
                   </div>
@@ -218,15 +208,15 @@
                      <div class="address">
                         <h3>Menu</h3>
                         <p><a href="./blog.html">Blog</a></p>
-                        <p><a href="./equipe.html">A propos</a></p>
-                        <p><a href="./aide.html">Aide & Contact</a></p>
-                        <p><a href="#">Connexion</a></p>
-                        <p><a href="#">Inscription</a></p>
+                        <p><a href="./equipe.html">About</a></p>
+                        <p><a href="./aide.html">Help & Contact</a></p>
+                        <p><a href="#">Log in</a></p>
+                        <p><a href="#">Sign in</a></p>
                      </div>
                   </div>
                   <div class="col-lg-4 col-md-6 col-sm-12 width">
                      <div class="address">
-                        <h3>Réseaux Sociaux </h3>
+                        <h3>Social medias</h3>
                         <div class="contant_icon">
                            <!--<li><img src="icon/fb.png" alt="icon"/></li>-->
                            <p><a href="https://twitter.com/Miap09882942"><img src="icon/tw.png" alt="icon"/></a>
