--- a/Principal (Anglais)/blog.html
+++ b/Principal (Anglais)/blog.html
@@ -34,22 +34,22 @@
                         <div class="limit-box">
                             <nav class="main-menu">
                                 <ul class="menu-area-main">
-                                    <li> <a href="./equipe.html">A propos</a>
+                                    <li> <a href="./equipe.html">About</a>
                                         <ul class="menu-area-main">
-                                            <li>Présentation du projet</li>
-                                            <li>Notre équipe</li>
+                                            <li>Presentation of the project</li>
+                                            <li>Our team</li>
                                         </ul>
                                     </li>
-                                    <li> <a href="./blog.html"> Blog</a> </li>
-                                    <li> <a href="./aide.html">Aide & Contact</a> </li>
+                                    <li> <a href="./blog.html">Blog</a> </li>
+                                    <li> <a href="./aide.html">Help & Contact</a> </li>
                                     <li>
                                         <form name="x" action="./index.php?controle=connexion&action=connexion" method="post">
-                                            <button type="submit" class="btn-link nav-link">Se Connecter</button>
+                                            <button type="submit" class="btn-link nav-link">Log in</button>
                                         </form>
                                     </li>
                                     <li>
                                         <form name="x" action="./index.php?controle=inscription&action=affins" method="post">
-                                            <button id="login" type="submit" class="btn-link nav-link">Inscription</button>
+                                            <button id="login" type="submit" class="btn-link nav-link">Sign in</button>
                                         </form>
                                     </li>
                                     <li>
@@ -76,7 +76,7 @@
                 <div class="col-md-12">
                     <div class="titlepage">
                         <h2> Blog </h2>
-                        <span>Suivez nos aventures culinaires avec notre blog !</span>
+                        <span>Follow our culinary adventures on our blog !</span>
                     </div>
                     <hr>
                 </div>
@@ -86,32 +86,35 @@
                 <div class="row">
                     <img class="imgBlog img-fluid" src="image/houmous.jpg" alt="Houmous">
                 </div>
-                <h4><strong>Date: 3 septembre 2020</strong></h4>
-                <h4><strong>Tintamarre on en a pas marre !</strong></h4>
+                <h4><strong>Date: September 3rd, 2020</strong></h4>
+                <h4><strong>We don't get tired of Tintamarre !</strong></h4>
                 <div>
-                  <i><a href="#CollapseTinta" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseTinta">En lire plus</a></i>
+                  <i><a href="#CollapseTinta" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseTinta">Read more</a></i>
                     <section id="CollapseTinta" class="collapse">
                         <div class="colBlog">
-                            <p><br>Aux manettes de Tintamarre, Gabrielle Beck, une ex architecte, designer, qui n’a rien laissé au hasard lors de sa reconversion en se formant chez Lenôtre. Chez Tintamarre, elle partage son amour pour la cuisine libanaise à travers ses souvenirs d’enfance et son savoir-faire. À l’entrée des pots de légumes en saumure et Gabrielle qui fait son mélange pour le zaatar.
+                            <p><br>In charge of Tintamarre, Gabrielle Beck, an ex architect, designer, who didn't leave anything to chance during her reconversion by training at Lenôtre. At Tintamarre, she shares her love for Lebanese food through her childhood memories and her know-how. For the starter, vegetables jars and Gabrielle who does her mix for the zaatar.
                                 <br><br><strong>
-                                Dans nos assiettes ?</strong>
+                                In our plates ?</strong>
                                 <br>
-                                Hoummous : Purée de pois-chiche à la tahina et au citron.
+                                Hoummous : Mashed cheakpeas with tahina and lemon.
                                 <br>
-                                Fatteh de pois chiche : pois-chiche cuits à la coriandre et à l’ail nappé de yaourt à la grecque et pignons de pin.
+                                Cheakpeas fatteh : cooked cheakpeas with coriander and garlic topped with greek yogurt and pine nuts.
                                 <br>
-                                Croquettes de halloumi caramélisées au miel et zaatar, tzatziki et huile pimentée.
+                                Croquettes of caramelized halloumi with honey and zaatar, tzatziki et spicy oil.
                                 <br>
-                                Frikeh au mijoté de boeuf : blé vert fumé aux parfums d’orient, mijoté de boeuf au miel et épices douces, légumes de saison.
+                                Frikeh of stewed beef : green weat, stewed beef with honey and soft spicies, seasonal vegetables.
                                 <br>
-                                Moudardara et son œuf parfait : lentilles au riz parfumé au cumin et relevé au piment, fondue de chou rouge.
+                                Moudardara and its perfect egg : lentil with rice perfumed with cumin and pepper, red cabbage fondue.
                                 <br>
-                                Mandarine pochée et riz au lait au agrumes.<br>Mouhallabieh au chocolat et éclats de pistaches caramélisés.
-                                <br><br><b>C’est combien ?</b><br>Plats : 14,50€.<br>Menu déjeuner Entrée + plat ou Plat + dessert : 16,50€<br>
-                                Sandwich kefta : 7,50€ / Sandwich veggie : 6,50€. (10€ avec une entrée).
+                                Poached mandarin and rice pudding with citruses.<br>Chocolate mouhallabieh and caramelized pistachios.
+                                <br><br><b>How much ?</b><br>Dishes : 14,50€.<br>Lunch menu : starter + dish or dish + dessert : 16,50€<br>
+                                Kefta sandwich : 7,50€ / Veggie sandwich : 6,50€. (10€ with a starter).
                 
                                 <br><br>
-                                <b>C'est excellent alors foncez !!</b>
+
+                                <b>It is excellent so go ahead !</b>
+                                <br>
+                                Source: <a>http://parisianavores.paris/tintamarre-restaurant-libanais-paris-19/</a>
                             </p>
                         </div>
                     </section>
@@ -124,26 +127,27 @@
                 <div class="row">
                     <img class="imgBlog" src="image/arepas.jpg" alt="Arepas Venezuela">
                 </div>
-                <h4><strong>Date: 18 juillet 2020 </strong></h4>
-                <h4><strong>Aji Dulce, La vie douce en approche ! </strong></h4>
+                <h4><strong>Date: July 18th, 2020</strong></h4>
+                <h4><strong>Aji Dulce, Dolce vita incoming ! </strong></h4>
                 <div>
-                   <i> <a href="#CollapseArepa" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseArepa">En lire plus</a></i>
+                   <i> <a href="#CollapseArepa" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseArepa">Read more</a></i>
                     <section id="CollapseArepa" class="collapse">
                         <div class="colBlog">
-                            <p>C’est un food truck et un restaurant vénézuélien qui fait la part belle à la spécialité la plus emblématique de la street food vénézuélienne : les arepas. Des galettes de maïs blanc, souvent garnie. Ici, elles sont cuites minute au four, et sont servies chaudes et croustillantes, et garnies à votre convenance, à choisir entre 9 recettes.
+                            <p>It is a food truck and a Venezuelan restaurant which gives pride to the most emblematic speciality of the Venezuelan street food : arepas. White corn patties, often garnished. Here, they are oven baked in a minute and served hot, crispy and garnished to your liking. You can choose between 9 recipes.
                                 <br>
-                                Aji Dulce compte un food truck qui se déplace et dont on peut suivre les emplacements sur leur site et réseaux sociaux, et une petite échoppe avec quelques places assises, dans le 9ème, à Saint-Georges.
-                                <br><br><strong>Dans nos assiettes ?</strong>
-                                <br>Tequenos : beignets au fromage frais vénézuélien
-                                <br>Arepa Pelua : boeuf effiloché mijoté dans une sauce légumes, fromage gouda.
-                                <br>Arepa Catira : poulet rôti effiloché mijoté dans notre sauce légumes, fromage amarillo (gouda)
-                                <br>Arepa Queso : fromage frais vénézuélien, avocat frais, banane plantain frite.
-                                <br>Tostones : chips de banane plantain verte légèrement salés et fromage frais vénézuélien.
+                                Aji Dulce has a food truck that moves and we can track its movements on their website and social medias, and a shop with a few seating places, in the 9th neighborhood in Saint-Georges.
+                                <br><br><strong>In our plates ?</strong>
+                                <br>Tequenos : doughnut filled with Venezuelan cream cheese.
+                                <br>Arepa Pelua : stewed frayed beef in a vegetable sauce and gouda cheese.
+                                <br>Arepa Catira : rosted chicken stewed in a vegetable sauce, amarillo cheese (gouda)
+                                <br>Arepa Queso : Venezuelan cream cheese, fresh avocado, fried plantain banana.
+                                <br>Tostones : green plantain banana chips lightly salted and Venezuelan cream cheese.
                                 <br><br>
-                                <strong>C’est combien ?</strong>
+                                <strong>How much ?</strong>
                                 <br>Arepas : 10,50€
-                                <br>Menu déj 13,50€ : Arepa + 2 sauces + entrée, dessert ou jus maison<br>
-                                <br><strong>Mettez du piment dans votre vie !</strong>
+                                <br>Lunch menu 13,50€ : Arepa + 2 sauces + starter, dessert or home made juice<br>
+                                <br><strong>Spice up your life !</strong>
+                                Source: <a>http://parisianavores.paris/aji-dulce-arepa-restaurant-venezuelien-paris-9/</a>
                             </p>
                         </div>
                     </section>
@@ -175,6 +179,7 @@
                                 <br>Entrée – plat -dessert : 23€ // Entrée – plat ou plat – dessert : 19€
                                 <br><br>
                                 <strong>Avec ça on a une faim de loup ! (enfin de tigre ça le fait mieux) </strong>
+                                Source: <a>http://parisianavores.paris/la-brigade-du-tigre-restaurant-paris-10/</a>
                             </p>
                         </div>
                     </section>
