--- a/Principal (Anglais)/aide.html
+++ b/Principal (Anglais)/aide.html
@@ -168,10 +168,10 @@
                 <form>
                     <div class="row">
                         <div class="col-sm-12">
-                            <input class="contactus" placeholder="Nom" type="text" name="Name">
+                            <input class="contactus" placeholder="Name" type="text" name="Name">
                         </div>
                         <div class="col-sm-12">
-                            <input class="contactus" placeholder="Numéro" type="text" name="Email">
+                            <input class="contactus" placeholder="Number" type="text" name="Email">
                         </div>
                         <div class="col-sm-12">
                             <input class="contactus" placeholder="Email" type="text" name="Email">
