--- a/Principal (Anglais)/equipe.html
+++ b/Principal (Anglais)/equipe.html
@@ -97,7 +97,7 @@
                 <div class="col-md text-center"><p>Our very own CEO, she is the one who is in charge of managing us and handling the project management such as the planning, giving tasks, making sure we are on schedule, handling the competitive analysis...
                     She is our spokesperson, you might have seen her in our videos.
                     Not only she is our CEO but she is the director and video editor behind our videos.
-                    She is also the one who overviews every designs and more. Finally, she is the one who translated our wonderful website.
+                    She is also the one who overviews every designs and more. Finally, she is the one who translated our wonderful website (Mehdi helped a little too, but shhh, you mustn't tell anyone).
                     PS: she always brings food for everyone ^^</p>
                 </div>
             </div>
