--- a/Principal/equipe.html
+++ b/Principal/equipe.html
@@ -95,11 +95,10 @@
             </div></br>
             <div class="row">
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/hassina.png" alt="logo" style="width:300px;"></div>
-                <div class="col-md text-center"><p>Our very own CEO, she’s the one who’s in charge of managing us (and kicking our butts) and handling the project management such as the planning, giving tasks, making sure we are on schedule, handling the competitive analysis.
-                    She is our spokesperson, you might have seen her in our videos.
-                    Not only she is our CEO but she is the director and video editor behind our videos.
-                    She is also the one who overviews every designs. Finally, she is the one who translated our wonderful website.
-                    PS: she always brings food for everyone ^^</p>
+                <div class="col-md text-center"><p>Notre propre PDG, c'est celle qui est en charge de nous mener (et de nous mettre des coup de pieds aux fesses) et de prendre en charge la gestion de projet, comme le planning, la distribution des tâches, vérifier si nous sommes dans les temps et gérer l'analyse concurrentielle.
+                    Elle est, non seulement notre PDG, mais elle est aussi la directrice et l'éditrice de toutes nos vidéos.
+                    Elle est également celle qui vérifie tous nos designs. Enfin, elle a traduite notre merveilleux site en anglais (Mehdi a un peu aidé mais chut, faut pas dire...).
+                    PS : Elle ramène toujours de la nourriture pour tout le monde ^^</p>
                 </div>
             </div>
             <hr>
@@ -108,9 +107,9 @@
             </div></br>
             <div class="row">
                 <div class="col-md text-center"><p>
-                    We introduce the first web developper: Moïna. She is our calm and competent asset.
-                    She handled the visual aspect of the website.
-                    She is also good at multitasking since she helped with the competitive analysis.</p>
+                    Nous avons le plaisir de vous introduire notre première développeuse web : Moïna. Elle est calme et compétente.
+                    Elle a géré l'aspect visuel de notre site.
+                    Elle est aussi très polyvalente car elle également travaillé sur l'analyse concurrentielle.</p>
                 </div>
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/moina.png" alt="logo" style="width:300px;"></div>
             </div>
@@ -120,9 +119,9 @@
             </div></br>
             <div class="row">
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/mehdi.png" alt="logo" style="width:300px;"></div>
-                <div class="col-md text-center"><p>Here comes the second web developper: Mehdi. He is lively and cheerful, always brights up the mood BUT he is always late.
-                    He handled the visual aspect of the website. He is good at multitasking as well since he took part in the competitive analysis.
-                    Mehdi is also our very own Community manager so don’t hesitate to interact with him on social media</p>
+                <div class="col-md text-center"><p>Voici notre second développeur web : Mehdi. Il est joyeux et enthousiaste, il met toujours la bonne ambiance MAIS il est toujours en retard.
+                    Il a géré l'aspect visuel du site. Il est également polyvalent car il a participé à l'analyse concurrentielle.
+                    Mehdi est aussi le gérant de notre communauté, donc n'hésitez pas à intéragir avec lui sur les réseaux.</p>
                 </div>
             </div>
             <hr>
@@ -130,9 +129,10 @@
                 <div class="col-md"><h1>Quentin DARTY : Développeur</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"><p>Quentin is like the quiet kid in the back of the class. He is discret at first but more outgoing if you get to know him.
-                    He is very creative, that’s why he was in charge of every design.
-                    He designed the graphic charter of the website but also the future app.</p>
+                <div class="col-md text-center"><p>Quentin est comme l'élève timide qui est au fond de la classe. Il paraît discret à première vue, mais il devient plus extraverti dès que vous commencez à le connaitre.
+                    Il est très créatif, c'est cela qu'il est en charge de chaque design.
+                    Il a réalisé la charte graphique de notre site et de notre future application mobile.</p>
+                    
                 </div>
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/Quentin.png" alt="logo" style="width:300px;"></div>
             </div></br>
@@ -142,8 +142,8 @@
             </div></br>
             <div class="row">
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/hubert.png" alt="logo" style="width:300px;"></div>
-                <div class="col-md text-center"><p>Hubert is the cool kid. He’s very outgoing and can get along with anyone. It’s always a pleasure working with him since he lights up the mood.
-                    He is also very talented since he is the one currently coding our website but also our incoming app.</p>
+                <div class="col-md text-center"><p>Hubert est l'enfant cool. Très extraverti, il s'entend bien avec tout le monde. C'est toujours un plaisir de travailler avec lui car il met de l'ambiance.
+                    Il est très talentueux vu qu'il est actuellement en train de programmer notre site et notre future application.</p>
                 </div>
             </div>
             <hr>
@@ -151,7 +151,8 @@
                 <div class="col-md"><h1>Fardeen POOREA : Développeur</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"><p>Idk yet.</p></div>
+                <div class="col-md text-center"><p>Fardeen est amusant et adore blaguer, mais il arrive toujours à terminer ses tâches. Il gère notre base de données et a implémenté les fonctions de Miap.    
+                </p></div>
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/fardeen.png" alt="logo" style="width:300px;"></div>
             </div>
             <hr>
@@ -160,7 +161,8 @@
             </div></br>
             <div class="row">
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/janik.png" alt="logo" style="width:300px;"></div>
-                <div class="col-md text-center"><p>Janik is like the quiet kid in front of the class. He is smart and has a great sense of logic</p></div>
+                <div class="col-md text-center"><p>Janik est comme l'élève silencieux au premier rang de la classe. Il est intelligent et pense de façon logique. Il a fait équipe avec Fardeen pour implémenter les fonctions de Miap et géré la base de données.
+                </p></div>
             </div>
         </div>
     </div>
