--- a/Principal/equipe.html
+++ b/Principal/equipe.html
@@ -95,7 +95,7 @@
             </div></br>
             <div class="row">
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/hassina.png" alt="logo" style="width:300px;"></div>
-                <div class="col-md text-center"><p>Notre propre PDG, c'est celle qui est en charge de nous mener (et de nous mettre des coup de pieds aux fesses) et de prendre en charge la gestion de projet, comme le planning, la distribution des tâches, vérifier si nous sommes dans les temps et gérer l'analyse concurrentielle.
+                <div class="col-md text-center"><p>Notre propre PDG, c'est celle qui est en charge de nous mener et de prendre en charge la gestion de projet, comme le planning, la distribution des tâches, vérifier si nous sommes dans les temps et gérer l'analyse concurrentielle.
                     Elle est, non seulement notre PDG, mais elle est aussi la directrice et l'éditrice de toutes nos vidéos.
                     Elle est également celle qui vérifie tous nos designs. Enfin, elle a traduite notre merveilleux site en anglais (Mehdi a un peu aidé mais chut, faut pas dire...).
                     PS : Elle ramène toujours de la nourriture pour tout le monde ^^</p>
@@ -109,7 +109,7 @@
                 <div class="col-md text-center"><p>
                     Nous avons le plaisir de vous introduire notre première développeuse web : Moïna. Elle est calme et compétente.
                     Elle a géré l'aspect visuel de notre site.
-                    Elle est aussi très polyvalente car elle également travaillé sur l'analyse concurrentielle.</p>
+                    Elle est aussi très polyvalente car elle a également travaillé sur l'analyse concurrentielle.</p>
                 </div>
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/moina.png" alt="logo" style="width:300px;"></div>
             </div>
@@ -121,17 +121,17 @@
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/mehdi.png" alt="logo" style="width:300px;"></div>
                 <div class="col-md text-center"><p>Voici notre second développeur web : Mehdi. Il est joyeux et enthousiaste, il met toujours la bonne ambiance MAIS il est toujours en retard.
                     Il a géré l'aspect visuel du site. Il est également polyvalent car il a participé à l'analyse concurrentielle.
-                    Mehdi est aussi le gérant de notre communauté, donc n'hésitez pas à intéragir avec lui sur les réseaux.</p>
+                    Mehdi est aussi le gérant de notre communauté, donc n'hésitez pas à intéragir avec lui sur les réseaux sociaux.</p>
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-md"><h1>Quentin DARTY : Développeur</h1></div>
+                <div class="col-md"><h1>Quentin DARTY : Designer</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"><p>Quentin est comme l'élève timide qui est au fond de la classe. Il paraît discret à première vue, mais il devient plus extraverti dès que vous commencez à le connaitre.
-                    Il est très créatif, c'est cela qu'il est en charge de chaque design.
-                    Il a réalisé la charte graphique de notre site et de notre future application mobile.</p>
+                <div class="col-md text-center"><p>Quentin est comme l'élève timide qui est au fond de la classe. Il paraît discret à première vue, mais il devient plus extraverti dès que vous commencez à le connaître.
+                    Il est très créatif, c'est pour cela qu'il est en charge de chaque design.
+                    Il a réalisé la charte graphique de notre site et de notre application mobile.</p>
                     
                 </div>
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/Quentin.png" alt="logo" style="width:300px;"></div>
@@ -143,12 +143,12 @@
             <div class="row">
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/hubert.png" alt="logo" style="width:300px;"></div>
                 <div class="col-md text-center"><p>Hubert est l'enfant cool. Très extraverti, il s'entend bien avec tout le monde. C'est toujours un plaisir de travailler avec lui car il met de l'ambiance.
-                    Il est très talentueux vu qu'il est actuellement en train de programmer notre site et notre future application.</p>
+                    Il est très talentueux puisqu'il est actuellement en train de programmer à la fois notre site et notre future application.</p>
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-md"><h1>Fardeen POOREA : Développeur</h1></div>
+                <div class="col-md"><h1>Fardeen POOREA : Développeur web et gestionnaire de données</h1></div>
             </div></br>
             <div class="row">
                 <div class="col-md text-center"><p>Fardeen est amusant et adore blaguer, mais il arrive toujours à terminer ses tâches. Il gère notre base de données et a implémenté les fonctions de Miap.    
@@ -157,11 +157,11 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-md"><h1>Janik JIANG : Développeur</h1></div>
+                <div class="col-md"><h1>Janik JIANG : Développeur web et gestionnaire de données</h1></div>
             </div></br>
             <div class="row">
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/janik.png" alt="logo" style="width:300px;"></div>
-                <div class="col-md text-center"><p>Janik est comme l'élève silencieux au premier rang de la classe. Il est intelligent et pense de façon logique. Il a fait équipe avec Fardeen pour implémenter les fonctions de Miap et géré la base de données.
+                <div class="col-md text-center"><p>Janik est comme l'élève silencieux au premier rang de la classe. Il est intelligent et pense de façon logique. Il a fait équipe avec Fardeen pour implémenter les fonctions de Miap et gérer la base de données.
                 </p></div>
             </div>
         </div>
